--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -28,3 +28,16 @@
   - name: Print directory status
     ansible.builtin.debug:
       msg: output is :{{directory}}
+  
+  - name: create an app directory 
+    ansible.builtin.file:
+      path: /app
+      state: directory
+    when: directory.stat.exists == False
+
+  - name: Download the application code to created app directory.
+    ansible.builtin.get_url:
+      url: https://roboshop-builds.s3.amazonaws.com/catalogue.zip
+      dest: /tmp/catalogue.zip
+
+  
