--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -39,5 +39,34 @@
     ansible.builtin.get_url:
       url: https://roboshop-builds.s3.amazonaws.com/catalogue.zip
       dest: /tmp/catalogue.zip
+  
+  - name: unzip the files
+    ansible.builtin.unarchive:
+      src: /tmp/catalogue.zip
+      dest: /app
+      remote_src: yes
+
+  - name: This task is to install dependeices
+    ansible.builtin.command: npm install
+    args:
+      chdir: /app
+
+  - name: This task is to copy the catalogue service
+    ansible.builtin.copy:
+      src: catalogue.service
+      dest: /etc/systemd/system/catalogue.service
+  
+  - name: Load the service.
+    ansible.builtin.systemd_service:
+      daemon_reload: true
+  
+  - name: This task is to Start & Enable catalogue Service
+    ansible.builtin.service:
+      name: catalogue
+      state: started
+      enabled: yes
+  
+
+
 
   
