--- a/redis.yaml
+++ b/redis.yaml
@@ -6,6 +6,7 @@
     ansible.builtin.yum:
       name: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
       state: latest
+      disable_gpg_check: true
   
   - name: This task is to enable Redis 6.2 from package streams
     ansible.builtin.command: yum module enable redis:remi-6.2 -y
